--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+alembic==1.8.1
 anyio==3.6.2
 black==22.10.0
 certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==2.1.1
 click==8.1.3
+cryptography==38.0.4
 dnspython==2.2.1
 email-validator==1.3.0
 fastapi==0.88.0
@@ -15,6 +19,7 @@ idna==3.4
 isort==5.10.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Mako==1.2.4
 MarkupSafe==2.1.1
 mypy==0.991
 mypy-extensions==0.4.3
@@ -22,7 +27,7 @@ orjson==3.8.3
 pathspec==0.10.2
 platformdirs==2.6.0
 psycopg2==2.9.5
-pydantic==1.10.2
+pycparser==2.21
 python-dotenv==0.21.0
 python-multipart==0.0.5
 PyYAML==6.0
@@ -35,6 +40,7 @@ starlette==0.22.0
 tomli==2.0.1
 typing_extensions==4.4.0
 ujson==5.6.0
+urllib3==1.26.13
 uvicorn==0.20.0
 uvloop==0.17.0
 watchfiles==0.18.1
